# deep_research_takehome

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  langgraph.json  main.py  pyproject.toml
examples/: lisbon-earthquake-1755-influence-on-european-development.md
src/: base_agent.py  deep_research_agent.py  deep_research_graph_builder.py  deep_research_router.py  deep_research_state.py
src/agents/: __init__.py  answer_agent.py  answer_node.py  research_agent.py  scoping_agent.py  search_agent.py  topic_extractor_agent.py
src/agents/orchestrator/: orchestrator_research_agent.py  orchestrator_research_agent_graph_builder.py  orchestrator_research_state.py  orchestrator_router.py
src/agents/research_agent/: research_agent.py  research_agent_builder.py  research_state.py
