[project]
name = "deep-research-takehome"
version = "0.1.0"
description = "Add your description hereı"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.17",
    "langchain-tavily>=0.2.12",
    "langchain[google-genai]>=0.3.27",
    "langgraph-cli[inmem]>=0.4.2",
    "pydantic>=2.11.10",
    "ruff>=0.13.3",
]
